--- a/test/golden/Fib10.lc.code.gen.am
+++ b/test/golden/Fib10.lc.code.gen.am
@@ -1,30 +1,110 @@
 [ TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
-            ( VaThunk "sys_thunk_5" [] )
+            ( VaThunk "sys_thunk_14" [] )
         , IDefine "top_e_recFib"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
-            ( VaThunk "sys_thunk_6" [] )
+            ( VaThunk "sys_thunk_20" [] )
         , IDefine "top_e_fib"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
-        [ IPush
+        [ IAssign
+            ( AIdent "var_c_f0_9" )
+            ( VaThunk "sys_thunk_21" [] )
+        , IPush
             ( VaInt 10 )
         , ICall
             ( VaAddr
-                ( AIdent "top_e_fib" )
+                ( AIdent "var_c_f0_9" )
             )
         , IDefine "top_e_main"
         ]
     }
 , ThunkCodeSection
     { thunkCodeSectionName = "sys_thunk_0"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_3_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_3_0" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 2 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 1 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , ICall
+            ( VaAddr
+                ( ALocalEnv 3 )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 4
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_1"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_2_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_0"
+                [ ALocalEnv 0
+                , ALocalEnv 1
+                , AIdent "var_aa_2_0"
+                , ALocalEnv 2
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 3
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_2"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_1_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_1"
+                [ ALocalEnv 0
+                , AIdent "var_aa_1_0"
+                , ALocalEnv 1
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 2
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_3"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_2"
+                [ AIdent "var_aa_0_0"
+                , ALocalEnv 0
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_4"
     , thunkCode =
         [ IScope
         , IPush
@@ -41,6 +121,11 @@
             ( AIdent "var_c_c_1" )
         , IPop
             ( AIdent "var_e_y" )
+        , IAssign
+            ( AIdent "var_c_f0_6" )
+            ( VaThunk "sys_thunk_3"
+                [ ALocalEnv 2 ]
+            )
         , ICondJump
             ( VaAddr
                 ( AIdent "var_c_c_1" )
@@ -79,7 +164,7 @@
             )
         , ICall
             ( VaAddr
-                ( ALocalEnv 2 )
+                ( AIdent "var_c_f0_6" )
             )
         , IEndScope
         , IReceive
@@ -129,12 +214,12 @@
     , thunkEnvSize = 4
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_1"
+    { thunkCodeSectionName = "sys_thunk_5"
     , thunkCode =
         [ IPop
             ( AIdent "var_e_x" )
         , ISetReturn
-            ( VaThunk "sys_thunk_0"
+            ( VaThunk "sys_thunk_4"
                 [ ALocalEnv 0
                 , ALocalEnv 1
                 , ALocalEnv 2
@@ -146,12 +231,12 @@
     , thunkEnvSize = 3
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_2"
+    { thunkCodeSectionName = "sys_thunk_6"
     , thunkCode =
         [ IPop
             ( AIdent "var_e_l" )
         , ISetReturn
-            ( VaThunk "sys_thunk_1"
+            ( VaThunk "sys_thunk_5"
                 [ AIdent "var_e_l"
                 , ALocalEnv 0
                 , ALocalEnv 1
@@ -162,12 +247,12 @@
     , thunkEnvSize = 2
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_3"
+    { thunkCodeSectionName = "sys_thunk_7"
     , thunkCode =
         [ IPop
             ( AIdent "var_e_n" )
         , ISetReturn
-            ( VaThunk "sys_thunk_2"
+            ( VaThunk "sys_thunk_6"
                 [ AIdent "var_e_n"
                 , ALocalEnv 0
                 ]
@@ -177,11 +262,11 @@
     , thunkEnvSize = 1
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_4"
+    { thunkCodeSectionName = "sys_thunk_8"
     , thunkCode =
         [ IAssign
             ( AIdent "var_c_r_7" )
-            ( VaThunk "sys_thunk_3"
+            ( VaThunk "sys_thunk_7"
                 [ ALocalEnv 0 ]
             )
         , ICall
@@ -193,10 +278,92 @@
     , thunkEnvSize = 1
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_5"
+    { thunkCodeSectionName = "sys_thunk_9"
     , thunkCode =
-        [ IRecAssign
-            ( AIdent "var_e_recFib" ) "sys_thunk_4"
+        [ IAssign
+            ( AIdent "var_aa_0_0_temp" )
+            ( VaThunk "sys_thunk_8"
+                [ ALocalEnv 0 ]
+            )
+        , IPop
+            ( AIdent "var_aa_0_0" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_0_0_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_1_0_temp" )
+        , IPop
+            ( AIdent "var_aa_1_0" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_1_0_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_2_0_temp" )
+        , IPop
+            ( AIdent "var_aa_2_0" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_2_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_2_0_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_3_0_temp" )
+        , IPop
+            ( AIdent "var_aa_3_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_3_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_3_0_temp" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_10"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_3_1" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_3_1" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 2 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 1 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , IRecAssign
+            ( AIdent "var_e_recFib" ) "sys_thunk_9"
             [ AIdent "var_e_recFib" ]
         , ICall
             ( VaAddr
@@ -204,13 +371,195 @@
             )
         , IExit
         ]
+    , thunkEnvSize = 3
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_11"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_2_1" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_10"
+                [ ALocalEnv 0
+                , ALocalEnv 1
+                , AIdent "var_aa_2_1"
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 2
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_12"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_1_1" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_11"
+                [ ALocalEnv 0
+                , AIdent "var_aa_1_1"
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_13"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_1" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_12"
+                [ AIdent "var_aa_0_1" ]
+            )
+        , IExit
+        ]
     , thunkEnvSize = 0
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_6"
+    { thunkCodeSectionName = "sys_thunk_14"
+    , thunkCode =
+        [ IAssign
+            ( AIdent "var_aa_0_1_temp" )
+            ( VaThunk "sys_thunk_13" [] )
+        , IPop
+            ( AIdent "var_aa_0_1" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_0_1_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_1_1_temp" )
+        , IPop
+            ( AIdent "var_aa_1_1" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_1_1_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_2_1_temp" )
+        , IPop
+            ( AIdent "var_aa_2_1" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_2_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_2_1_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_3_1_temp" )
+        , IPop
+            ( AIdent "var_aa_3_1" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_3_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_3_1_temp" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_15"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_3_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_3_0" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 2 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 1 )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_recFib" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 3
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_16"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_2_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_15"
+                [ ALocalEnv 0
+                , ALocalEnv 1
+                , AIdent "var_aa_2_0"
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 2
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_17"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_1_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_16"
+                [ ALocalEnv 0
+                , AIdent "var_aa_1_0"
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_18"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_17"
+                [ AIdent "var_aa_0_0" ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_19"
     , thunkCode =
         [ IPop
             ( AIdent "var_e_n" )
+        , IAssign
+            ( AIdent "var_c_f0_8" )
+            ( VaThunk "sys_thunk_18" [] )
         , IScope
         , IPush
             ( VaAddr
@@ -218,7 +567,7 @@
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_e_recFib" )
+                ( AIdent "var_c_f0_8" )
             )
         , IEndScope
         , IReceive
@@ -248,6 +597,43 @@
         , ICall
             ( VaAddr
                 ( AIdent "var_c_f3_8" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_20"
+    , thunkCode =
+        [ IAssign
+            ( AIdent "var_aa_0_0_temp" )
+            ( VaThunk "sys_thunk_19" [] )
+        , IPop
+            ( AIdent "var_aa_0_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_0_0_temp" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_21"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_fib" )
             )
         , IExit
         ]
