--- a/test/golden/HugeRec.lc.code.gen.am
+++ b/test/golden/HugeRec.lc.code.gen.am
@@ -1,18 +1,21 @@
 [ TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
-            ( VaThunk "sys_thunk_3" [] )
+            ( VaThunk "sys_thunk_8" [] )
         , IDefine "top_e_recF"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
-        [ IScope
+        [ IAssign
+            ( AIdent "var_c_f0_7" )
+            ( VaThunk "sys_thunk_10" [] )
+        , IScope
         , IPush
             ( VaInt 1000000 )
         , ICall
             ( VaAddr
-                ( AIdent "top_e_recF" )
+                ( AIdent "var_c_f0_7" )
             )
         , IEndScope
         , IReceive
@@ -30,7 +33,48 @@
     { thunkCodeSectionName = "sys_thunk_0"
     , thunkCode =
         [ IPop
+            ( AIdent "var_aa_1_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_0" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , ICall
+            ( VaAddr
+                ( ALocalEnv 1 )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 2
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_1"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_0"
+                [ AIdent "var_aa_0_0"
+                , ALocalEnv 0
+                ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_2"
+    , thunkCode =
+        [ IPop
             ( AIdent "var_e_x" )
+        , IAssign
+            ( AIdent "var_c_f0_5" )
+            ( VaThunk "sys_thunk_1"
+                [ ALocalEnv 1 ]
+            )
         , IScope
         , IPush
             ( VaAddr
@@ -70,7 +114,7 @@
             )
         , ICall
             ( VaAddr
-                ( ALocalEnv 1 )
+                ( AIdent "var_c_f0_5" )
             )
         , IEndScope
         , IReceive
@@ -91,12 +135,12 @@
     , thunkEnvSize = 2
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_1"
+    { thunkCodeSectionName = "sys_thunk_3"
     , thunkCode =
         [ IPop
             ( AIdent "var_e_n" )
         , ISetReturn
-            ( VaThunk "sys_thunk_0"
+            ( VaThunk "sys_thunk_2"
                 [ AIdent "var_e_n"
                 , ALocalEnv 0
                 ]
@@ -106,11 +150,11 @@
     , thunkEnvSize = 1
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_2"
+    { thunkCodeSectionName = "sys_thunk_4"
     , thunkCode =
         [ IAssign
             ( AIdent "var_c_r_6" )
-            ( VaThunk "sys_thunk_1"
+            ( VaThunk "sys_thunk_3"
                 [ ALocalEnv 0 ]
             )
         , ICall
@@ -122,14 +166,141 @@
     , thunkEnvSize = 1
     }
 , ThunkCodeSection
-    { thunkCodeSectionName = "sys_thunk_3"
+    { thunkCodeSectionName = "sys_thunk_5"
     , thunkCode =
-        [ IRecAssign
-            ( AIdent "var_e_recF" ) "sys_thunk_2"
+        [ IAssign
+            ( AIdent "var_aa_0_0_temp" )
+            ( VaThunk "sys_thunk_4"
+                [ ALocalEnv 0 ]
+            )
+        , IPop
+            ( AIdent "var_aa_0_0" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_0_0_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_1_0_temp" )
+        , IPop
+            ( AIdent "var_aa_1_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_0" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_1_0_temp" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_6"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_1_1" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_1" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , IRecAssign
+            ( AIdent "var_e_recF" ) "sys_thunk_5"
             [ AIdent "var_e_recF" ]
         , ICall
             ( VaAddr
                 ( AIdent "var_e_recF" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_7"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_1" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_6"
+                [ AIdent "var_aa_0_1" ]
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_8"
+    , thunkCode =
+        [ IAssign
+            ( AIdent "var_aa_0_1_temp" )
+            ( VaThunk "sys_thunk_7" [] )
+        , IPop
+            ( AIdent "var_aa_0_1" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_0_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_0_1_temp" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_aa_1_1_temp" )
+        , IPop
+            ( AIdent "var_aa_1_1" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_1" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "var_aa_1_1_temp" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 0
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_9"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_1_0" )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_aa_1_0" )
+            )
+        , IPush
+            ( VaAddr
+                ( ALocalEnv 0 )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_recF" )
+            )
+        , IExit
+        ]
+    , thunkEnvSize = 1
+    }
+, ThunkCodeSection
+    { thunkCodeSectionName = "sys_thunk_10"
+    , thunkCode =
+        [ IPop
+            ( AIdent "var_aa_0_0" )
+        , ISetReturn
+            ( VaThunk "sys_thunk_9"
+                [ AIdent "var_aa_0_0" ]
             )
         , IExit
         ]
