--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -77,11 +77,11 @@ library
     LambdaComp.AM.Eval
     LambdaComp.AM.Syntax
     LambdaComp.CBPV.ArityAnalysis
+    LambdaComp.CBPV.Optimization.BetaReduction
     LambdaComp.CBPV.Optimization.BindingConversion
     LambdaComp.CBPV.Optimization.DeadBindingElimination
     LambdaComp.CBPV.Optimization.InlineBinding
     LambdaComp.CBPV.Optimization.Local
-    LambdaComp.CBPV.Optimization.SkipReturn
     LambdaComp.CBPV.Syntax
     LambdaComp.CBPV.ToAM
     LambdaComp.CBPV.ToC
